# humaniq-android

./: .gitignore  .gitmodules  LICENSE.txt  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: camera-lib.cpp  photomaker-wrapper.cpp
app/src/main/cpp/include/: Def.hpp  ImageView.hpp  PhotoMaker.hpp  Point.hpp  Rect.hpp
app/src/main/res/drawable/: border_error_edit_text.xml  dashed_white_line.xml  ic_menu_white.xml  register_photo_frame.xml  rounded_rect_dark_blue.xml  rounded_rect_white.xml  rounded_rect_white_small_radius.xml  selector_bottom_menu_button.xml  selector_circle_white_button.xml  selector_regular_button.xml  selector_round_button.xml  selector_settings_button.xml  selector_take_photo_button.xml
app/src/main/res/drawable-v21/: regular_button_selector.xml  selector_bottom_menu_button.xml  selector_circle_white_button.xml  selector_regular_button.xml  selector_round_button.xml  selector_settings_button.xml  selector_take_photo_button.xml
app/src/main/res/layout/: activity_camera.xml  activity_dashboard.xml  activity_graphic_key.xml  activity_greeter.xml  activity_help_video.xml  activity_login_passwd.xml  activity_login_register.xml  activity_main.xml  activity_pin_code.xml  activity_profile.xml  activity_register.xml  activity_take_photo.xml  bottom_menu.xml  button_pin_key.xml  button_settings.xml  fragment_history.xml  fragment_photo.xml  fragment_receive_coins.xml  fragment_settings.xml  fragment_transfer_coins.xml  (+7 more)
(+104 files in other folders)
